<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>com.github.ness</groupId>
	<artifactId>ness</artifactId>
	<version>2.5.0-SNAPSHOT</version>
	<name>NESS-Reloaded</name>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<junit.version>5.7.0</junit.version>
		<slf4j.version>1.7.30</slf4j.version>
		<protocollib.version>4.5.0</protocollib.version>
		<caffeine.version>2.8.5</caffeine.version>
		<dazzleconf.version>1.0.0-RC1</dazzleconf.version>
	</properties>
	
	<licenses>
		<license>
			<name>GNU General Public License, Version 3</name>
			<url>https://www.gnu.org/licenses/gpl-3.0-standalone.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	
	<developers>
		<developer>
			<id>herobrine99dan</id>
			<roles>
				<role>creator</role>
				<role>developer</role>
			</roles>
			<timezone>Europe/Rome</timezone>
		</developer>
		<developer>
			<id>anandbeh</id>
			<name>Anand Beh</name>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>America/New_York</timezone>
		</developer>
	</developers>
	
	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<finalName>${project.name}_${project.version}</finalName>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                   <configLocation>checkstyle.xml</configLocation>
                </configuration>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<trimStackTrace>false</trimStackTrace>
					<argLine>-Xverify:none -XX:TieredStopAtLevel=1 -XX:-TieredCompilation</argLine>
					<systemPropertyVariables>
						<java.util.logging.config.file>src/test/resources/logging.properties</java.util.logging.config.file>
					</systemPropertyVariables>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.junit.jupiter</groupId>
						<artifactId>junit-jupiter-engine</artifactId>
						<version>${junit.version}</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.3</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<minimizeJar>false</minimizeJar>
							<artifactSet>
								<includes>
									<include>com.github.ben-manes.caffeine:caffeine</include>
									<include>space.arim.dazzleconf:*</include>
								</includes>
							</artifactSet>
							<relocations>
								<relocation>
									<pattern>com.github.benmanes.caffeine</pattern>
									<shadedPattern>com.github.ness.shaded.com.github.benmanes.caffeine</shadedPattern>
								</relocation>
								<relocation>
									<pattern>space.arim.dazzleconf</pattern>
									<shadedPattern>com.github.ness.shaded.space.arim.dazzleconf</shadedPattern>
								</relocation>
							</relocations>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	
	<dependencies>
		<!-- Implementation dependencies, 'optional' is used to limit transitivity -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.12</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.github.ben-manes.caffeine</groupId>
			<artifactId>caffeine</artifactId>
			<version>${caffeine.version}</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>space.arim.dazzleconf</groupId>
			<artifactId>dazzleconf-ext-snakeyaml</artifactId>
			<version>${dazzleconf.version}</version>
			<optional>true</optional>
		</dependency>
		<!-- Testing -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-jdk14</artifactId>
			<version>${slf4j.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- Spigot API -->
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.12.2-R0.1-SNAPSHOT</version>
			<exclusions>
				<exclusion>
					<groupId>junit</groupId>
					<artifactId>junit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-transport</artifactId>
			<version>4.0.23.Final</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
	
	<repositories>
		<repository>
        	<id>dmulloy2-repo</id>
        	<url>https://repo.dmulloy2.net/nexus/repository/public/</url>
        </repository>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>arim-mvn-lgpl3</id>
			<url>https://mvn-repo.arim.space/lesser-gpl3/</url>
		</repository>
	</repositories>
</project>